✅ Day 3 Complete – Delete functionality, improved UI, clean routes

--- a/views/events.html
+++ b/views/events.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>All Events</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   <h1>Upcoming Events</h1>
   <ul>
-    <!-- EVENTS GO HERE -->
     {{eventList}}
   </ul>
   <a href="/add-event">+ Add New Event</a>
