--- a/views/add-event.html
+++ b/views/add-event.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Add Event</title>
+    <link rel="stylesheet" href="/style.css">
+
 </head>
 <body>
   <h1>Create a New Event</h1>
